--- a/plugins/basic-post/assets/css/style.css
+++ b/plugins/basic-post/assets/css/style.css
@@ -1,35 +1,36 @@
-/* assets/css/style.css */
-
 body {
-    font-family: Arial, sans-serif;
+    margin: 0;
+    height: 100vh;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: var(--text-color);
 }
 
-.note-editable {
-background-color: #f8f9fa !important;
-color: #000 !important;
+/* Custom card */
+.custom-card {
+    transition: box-shadow 0.3s ease, border-color 0.3s ease;
+    border: 1px solid var(--border-color);
+    background-color: var(--card-bg);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    overflow: hidden;
 }
 
-.categories-container {
-max-height: 300px;
-overflow-y: auto;
-border: 1px solid;
-border-radius: 10px;
-padding: 10px;
-border-color: var(--bs-border-color);
+.custom-card:hover {
+    box-shadow: 0 4px 15px rgba(0, 123, 255, 0.5);
+    border-color: #007BFF;
 }
 
-.scrollable-permissions {
-padding: 8px;
-transition: background-color 0.3s;
+/* Title and text */
+.card-title,
+.card-text {
+    color: var(--text-color);
 }
 
-.scrollable-permissions:hover {
-background-color: #e2e6ea;
-border-radius: 10px;
-color:rgb(37, 37, 37) ;
-}
-
-.scrollable-permissions input[type="checkbox"] {
-margin-left: 10px;
-margin-right: 10px;
+/* Footer image */
+.blog_footer {
+    width: 100%;
+    height: 5rem;
+    background-size: contain;
+    background-repeat: repeat-x;
+    background-position: center;
 }
