--- a/plugins/basic-post/assets/css/blog.css
+++ b/plugins/basic-post/assets/css/blog.css
@@ -21,6 +21,15 @@
   box-sizing: border-box;
 }
 
+#postpage_title {
+    width: 70rem;
+    border: 5px solid black;
+    justify-self: center;
+    text-align: center;
+    height: 10rem;
+    font-size: xx-large;
+	}
+	
 .post_image{
 	background-size: contain;
     background-repeat: repeat-y;    
@@ -61,6 +70,9 @@
 .latest_image{
 	width: 240px;
 	height: 240px;
+	background: center;
+    background-size: contain;
+	background-repeat: no-repeat;
 }
 .latest_desc {
     word-wrap: break-word;
@@ -69,19 +81,20 @@
 }
 
 #bottom_link {
-  height: 148px;
-  width: 100%;
-  max-width: 564px;
-  padding: 1rem;
-  display: flex;
-  justify-content: center;
+	height: 148px;
+	width: 100%;
+	max-width: 564px;
+	padding: 1rem;
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-position: center;
 }
 
 #bottom_link a.new {
-  color: black;
-  text-decoration: none;
-  font-family: Georgia, serif;
-  font-size: 5vw;
+	color: black;
+	text-decoration: none;
+	font-family: Georgia, serif;
+	font-size: 5vw;
 }
 
 a.new {
@@ -97,7 +110,33 @@ a.new {
      1px  1px 0 black;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 400px) {
+	b, strong{
+		font-size: xx-large;
+	}
+	
+	#postpage_title {
+		width: 20rem;
+		border: 5px solid black;
+		justify-self: center;
+		text-align: center;
+		height: 5rem;
+		font-size: xx-large;
+	}
+	
+	#latest_section{
+        margin-top: -1em;
+        margin-bottom: -3em;
+	}
+
+	.latest_image {
+		width: 6em;
+		height: 6em;
+	}
+	
+	.container{
+		grid-template-rows: 0.1fr 4fr 0fr;
+	}
   #bottom_link a.new {
     font-size: 50px;
   }
